--- a/po/ms.po
+++ b/po/ms.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gawk 4.0.75\n"
 "Report-Msgid-Bugs-To: bug-gawk@gnu.org\n"
-"POT-Creation-Date: 2020-03-10 10:01+0200\n"
+"POT-Creation-Date: 2020-03-15 15:25+0200\n"
 "PO-Revision-Date: 2013-04-19 10:45+0800\n"
 "Last-Translator: Sharuzzaman Ahmat Raslan <sharuzzaman@gmail.com>\n"
 "Language-Team: Malay <translation-team-ms@lists.sourceforge.net>\n"
@@ -2030,16 +2030,17 @@ msgstr ""
 
 #: extension/filefuncs.c:848
 #, fuzzy
-msgid "fts: first parameter is not an array"
+msgid "fts: first argument is not an array"
 msgstr "cubaan untuk menggunakan parameter skalar `%s' sebagai tatasusunan"
 
 #: extension/filefuncs.c:854
-msgid "fts: second parameter is not a number"
-msgstr ""
+#, fuzzy
+msgid "fts: second argument is not a number"
+msgstr "cubaan untuk menggunakan parameter skalar `%s' sebagai tatasusunan"
 
 #: extension/filefuncs.c:860
 #, fuzzy
-msgid "fts: third parameter is not an array"
+msgid "fts: third argument is not an array"
 msgstr "cubaan untuk menggunakan parameter skalar `%s' sebagai tatasusunan"
 
 #: extension/filefuncs.c:867
@@ -2196,23 +2197,21 @@ msgid "revoutput: could not initialize REVOUT variable"
 msgstr ""
 
 #: extension/rwarray.c:119
-#, c-format
-msgid "do_writea: first argument is not a string\n"
-msgstr ""
+#, fuzzy
+msgid "do_writea: first argument is not a string"
+msgstr "cubaan untuk menggunakan parameter skalar `%s' sebagai tatasusunan"
 
 #: extension/rwarray.c:125
-#, c-format
-msgid "do_writea: second argument is not an array\n"
-msgstr ""
+#, fuzzy
+msgid "do_writea: second argument is not an array"
+msgstr "cubaan untuk menggunakan parameter skalar `%s' sebagai tatasusunan"
 
 #: extension/rwarray.c:172 extension/rwarray0.c:167
-#, c-format
-msgid "write_array: could not flatten array\n"
+msgid "write_array: could not flatten array"
 msgstr ""
 
 #: extension/rwarray.c:188 extension/rwarray0.c:181
-#, c-format
-msgid "write_array: could not release flattened array\n"
+msgid "write_array: could not release flattened array"
 msgstr ""
 
 #: extension/rwarray.c:255
@@ -2221,23 +2220,21 @@ msgid "array value has unknown type %d"
 msgstr ""
 
 #: extension/rwarray.c:292
-#, c-format
-msgid "do_reada: first argument is not a string\n"
-msgstr ""
+#, fuzzy
+msgid "do_reada: first argument is not a string"
+msgstr "cubaan untuk menggunakan parameter skalar `%s' sebagai tatasusunan"
 
 #: extension/rwarray.c:298
-#, c-format
-msgid "do_reada: second argument is not an array\n"
-msgstr ""
+#, fuzzy
+msgid "do_reada: second argument is not an array"
+msgstr "cubaan untuk menggunakan parameter skalar `%s' sebagai tatasusunan"
 
 #: extension/rwarray.c:342 extension/rwarray0.c:317
-#, c-format
-msgid "do_reada: clear_array failed\n"
+msgid "do_reada: clear_array failed"
 msgstr ""
 
 #: extension/rwarray.c:379 extension/rwarray0.c:353
-#, c-format
-msgid "read_array: set_array_element failed\n"
+msgid "read_array: set_array_element failed"
 msgstr ""
 
 #: extension/rwarray.c:489
@@ -2246,24 +2243,22 @@ msgid "treating recovered value with unknown type code %d as a string"
 msgstr ""
 
 #: extension/rwarray0.c:114
-#, c-format
-msgid "do_writea: argument 0 is not a string\n"
+msgid "do_writea: argument 0 is not a string"
 msgstr ""
 
 #: extension/rwarray0.c:120
-#, c-format
-msgid "do_writea: argument 1 is not an array\n"
-msgstr ""
+#, fuzzy
+msgid "do_writea: argument 1 is not an array"
+msgstr "cubaan untuk menggunakan parameter skalar `%s' sebagai tatasusunan"
 
 #: extension/rwarray0.c:267
-#, c-format
-msgid "do_reada: argument 0 is not a string\n"
+msgid "do_reada: argument 0 is not a string"
 msgstr ""
 
 #: extension/rwarray0.c:273
-#, c-format
-msgid "do_reada: argument 1 is not an array\n"
-msgstr ""
+#, fuzzy
+msgid "do_reada: argument 1 is not an array"
+msgstr "cubaan untuk menggunakan parameter skalar `%s' sebagai tatasusunan"
 
 #: extension/time.c:141
 msgid "gettimeofday: not supported on this platform"
@@ -2994,7 +2989,7 @@ msgstr ""
 msgid ""
 "Examples:\n"
 "\t%s '{ sum += $1 }; END { print sum }' file\n"
-"\tgawk -F: '{ print $1 }' /etc/passwd\n"
+"\t%s -F: '{ print $1 }' /etc/passwd\n"
 msgstr ""
 
 #: main.c:679
@@ -3326,39 +3321,39 @@ msgstr ""
 msgid "regexp component `%.*s' should probably be `[%.*s]'"
 msgstr ""
 
-#: support/dfa.c:951
+#: support/dfa.c:950
 msgid "unbalanced ["
 msgstr ""
 
-#: support/dfa.c:1072
+#: support/dfa.c:1071
 msgid "invalid character class"
 msgstr ""
 
-#: support/dfa.c:1198
+#: support/dfa.c:1197
 msgid "character class syntax is [[:space:]], not [:space:]"
 msgstr ""
 
-#: support/dfa.c:1265
+#: support/dfa.c:1264
 msgid "unfinished \\ escape"
 msgstr ""
 
-#: support/dfa.c:1426
+#: support/dfa.c:1425
 msgid "invalid content of \\{\\}"
 msgstr ""
 
-#: support/dfa.c:1429
+#: support/dfa.c:1428
 msgid "regular expression too big"
 msgstr ""
 
-#: support/dfa.c:1900
+#: support/dfa.c:1899
 msgid "unbalanced ("
 msgstr ""
 
-#: support/dfa.c:2017
+#: support/dfa.c:2016
 msgid "no syntax specified"
 msgstr ""
 
-#: support/dfa.c:2028
+#: support/dfa.c:2027
 msgid "unbalanced )"
 msgstr ""
 
