--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,7 @@
+2020-03-15         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* texinfo.tex: Updated, via GNULIB.
+
 2020-03-09         Andrew J. Schorr      <aschorr@telemetry-investments.com>
 
 	* gawktexi.in (@val_str_asc, @val_num_asc, @val_str_desc,
