Misc doc updates.

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,6 +1,7 @@
 2020-03-15         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* texinfo.tex: Updated, via GNULIB.
+	* gawktexi.in: Misc updates.
 
 2020-03-09         Andrew J. Schorr      <aschorr@telemetry-investments.com>
 
