--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2020-03-16         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* de.po, fr.po, pt_BR.po, pt.po: Updated.
+
 2020-03-12         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* sv.po: Updated.
