--- a/doc/gawk.texi
+++ b/doc/gawk.texi
@@ -38862,7 +38862,7 @@ The ability to delete all of an array at once with @samp{delete @var{array}}
 not permitted by the POSIX standard.
 
 The 2018 POSIX standard can be found online at
-@url{http://pubs.opengroup.org/onlinepubs/9699919799/}.
+@url{https://pubs.opengroup.org/onlinepubs/9699919799/}.
 
 
 @node BTL
@@ -40137,9 +40137,9 @@ Fortunately, shortly before the final release of @command{gawk} 4.0,
 the maintainer learned that the 2008 standard had changed the
 definition of ranges, such that outside the @code{"C"} and @code{"POSIX"}
 locales, the meaning of range expressions was @emph{undefined}.@footnote{See
-@uref{http://pubs.opengroup.org/onlinepubs/9699919799/basedefs/V1_chap09.html#tag_09_03_05, the standard}
+@uref{https://pubs.opengroup.org/onlinepubs/9699919799/basedefs/V1_chap09.html#tag_09_03_05, the standard}
 and
-@uref{http://pubs.opengroup.org/onlinepubs/9699919799/xrat/V4_xbd_chap09.html#tag_21_09_03_05, its rationale}.}
+@uref{https://pubs.opengroup.org/onlinepubs/9699919799/xrat/V4_xbd_chap09.html#tag_21_09_03_05, its rationale}.}
 
 By using this lovely technical term, the standard gives license
 to implementers to implement ranges in whatever way they choose.
@@ -44023,9 +44023,10 @@ The name for a series of standards
 that specify a Portable Operating System interface.  The ``IX'' denotes
 the Unix heritage of these standards.  The main standard of interest for
 @command{awk} users is
-@cite{IEEE Standard for Information Technology, Standard 1003.1-2008}.
+@cite{IEEE Standard for Information Technology, Standard 1003.1@sup{TM}-2017
+(Revision of IEEE Std 1003.1-2008)}.
 The 2018 POSIX standard can be found online at
-@url{http://pubs.opengroup.org/onlinepubs/9699919799/}.
+@url{https://pubs.opengroup.org/onlinepubs/9699919799/}.
 
 @item Precedence
 The order in which operations are performed when operators are used
