--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,8 @@
+2020-03-18         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in: Fix up references to POSIX standard. Thanks to
+	Antonio Columbo for the pointers.
+
 2020-03-15         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* texinfo.tex: Updated, via GNULIB.
