--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,7 @@
 2020-03-18         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* sv.po: Updated.
+	* it.po: Updated.
 
 2020-03-16         Arnold D. Robbins     <arnold@skeeve.com>
 
