--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2020-03-18         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* TODO: Add more stuff.
+
 2020-03-15         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (zos-diffout): New target.
