--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-Thu Jan 23 11:15:44 IST 2020
+Wed Mar 18 22:05:22 IST 2020
 ============================
 
 There were too many files tracking different thoughts and ideas for
@@ -56,6 +56,13 @@ Minor New Features
 
 	? Optional third argument for index indicating where to start the
 	search.
+
+	Suggested by Jannick:
+	* It is possible to make gawk look for a file with extension name
+	plus API version number(s) in case a shared lib with the expected
+	basename cannot be found?  This would help have extension versions
+	compiled against different API versions in one single directory
+	and make gawk pick the extension with the right API version.
 
 Major New Features
 ------------------
