--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2020-03-20         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* it.po: Updated.
+
 2020-03-18         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* sv.po: Updated.
