--- a/doc/it/ChangeLog
+++ b/doc/it/ChangeLog
@@ -1,3 +1,7 @@
+2020-03-19         Antonio Giovanni Colombo   <azc100@gmail.com>
+
+	* gawktexi.in: Updated.
+
 2020-03-16         Antonio Giovanni Colombo   <azc100@gmail.com>
 
 	* gawktexi.in: Updated.
