--- a/README
+++ b/README
@@ -1,5 +1,5 @@
   Copyright (C) 2005, 2006, 2007, 2009, 2010, 2011, 2012, 2013, 2014, 2015,
-  2016, 2017, 2018, 2019 Free Software Foundation, Inc.
+  2016, 2017, 2018, 2019, 2020 Free Software Foundation, Inc.
   
   Copying and distribution of this file, with or without modification,
   are permitted in any medium without royalty provided the copyright
@@ -11,7 +11,7 @@ This is GNU Awk 5.1.0. It is upwardly compatible with Brian Kernighan's
 version of Unix awk.  It is almost completely compliant with the
 2018 POSIX 1003.1 standard for awk. (See the note below about POSIX.)
 
-This is a bug-fix release. See NEWS and ChangeLog for details.
+This is a major release. See NEWS and ChangeLog for details.
 
 Work to be done is described briefly in the TODO file, which is available
 only in the 'master' branch in the Git repo.
@@ -21,7 +21,7 @@ Changes in this version are summarized in the NEWS file.
 Read the file POSIX.STD for a discussion of issues where the standard
 says one thing but gawk does something different.
 
-To format the documentation with TeX, use at least version 2017-09.16
+To format the documentation with TeX, use at least version 2019-09-20.22
 of texinfo.tex. There is a usable copy of texinfo.tex in the doc directory.
 You must also use at least version 6.7 of texindex and of makeinfo
 from the texinfo-6.7 distribution.
