--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,7 @@
+2020-03-30         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in, gawk.1, awkcard.in: Minor edits before release.
+
 2020-03-18         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in: Fix up references to POSIX standard. Thanks to
