--- a/doc/it/ChangeLog
+++ b/doc/it/ChangeLog
@@ -1,3 +1,8 @@
+2020-04-01         Antonio Giovanni Colombo   <azc100@gmail.com>
+
+	* gawk.1: Updated.
+	* gawktexi.in: Updated.
+
 2020-03-20         Antonio Giovanni Colombo   <azc100@gmail.com>
 
 	* gawktexi.in: Updated.
