Spellcheck the docs and update.

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,8 @@
+2020-04-10         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in, gawk.1: Fix some spelling errors.
+	* wordlist, wordlist2, wordlist3: Updated with more words.
+
 2020-04-01         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in: Clarify about whitespace.
