--- a/doc/gawk.1
+++ b/doc/gawk.1
@@ -1110,7 +1110,7 @@ When true,
 prints lint warnings. When false, it does not.
 The values allowed for the
 .B \-\^\-lint
-option may also be assinged to
+option may also be assigned to
 .BR LINT ,
 with the same effects.
 Any other true value just prints warnings.
