Fix configure --disable-lint.

--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,10 @@
 	* awkgram.c, command.c: Rebuild with Bison 3.5.4.
 	* NEWS: Updated.
 
+	Unrelated:
+
+	* awk.h (do_lint_extensions): Define to zero if NO_LINT.
+
 2020-04-02         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* field.c (re_parse_field): If default parsing and trailing
