--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,8 @@
+2020-04-12         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in: Contribution from Manuel Collado related
+	to CSV processing.
+
 2020-04-10         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in, gawk.1: Fix some spelling errors.
