Typo fixes in the manual.

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,8 @@
+2020-04-13         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in: Small typo fixes. Thanks to Antonio Columbo
+	for pointing them out.
+
 2020-04-12         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in: Contribution from Manuel Collado related
