--- a/doc/gawk.texi
+++ b/doc/gawk.texi
@@ -8324,6 +8324,7 @@ available for splitting regular strings (@pxref{String Functions}).
 @node More CSV
 @subsection More on CSV Files
 
+@cindex Collado, Manuel
 Manuel Collado notes that in addition to commas, a CSV field can also
 contains quotes, that have to be escaped by doubling them. The previously
 described regexps fail to accept quoted fields with both commas and
