--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2020-04-14         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* 5.1.0: Release tar ball made.
+
 2020-04-10         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* field.c (save_FPAT): New global variable.
