--- a/README_d/ChangeLog
+++ b/README_d/ChangeLog
@@ -1,3 +1,7 @@
+2020-04-14         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* 5.1.0: Release tar ball made.
+
 2019-08-07         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* README.development: New file.
