--- a/extension/ChangeLog
+++ b/extension/ChangeLog
@@ -1,3 +1,7 @@
+2020-04-14         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* 5.1.0: Release tar ball made.
+
 2020-03-11         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* filefuncs.c, ordchr.c, rwarray.c, rwarray0.c: Message updates.
