--- a/extension/build-aux/ChangeLog
+++ b/extension/build-aux/ChangeLog
@@ -1,3 +1,7 @@
+2020-04-14         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* 5.1.0: Release tar ball made.
+
 2020-01-19         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* ar-lib, compile, config.guess, config.rpath, config.sub,
