--- a/pc/ChangeLog
+++ b/pc/ChangeLog
@@ -1,3 +1,7 @@
+2020-04-14         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* 5.1.0: Release tar ball made.
+
 2019-12-22         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.tst: Updated.
