--- a/vms/ChangeLog
+++ b/vms/ChangeLog
@@ -1,3 +1,7 @@
+2020-04-14         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* 5.1.0: Release tar ball made.
+
 2020-03-07         John E. Malmberg      <wb8tyw@qsl.net>
 
 	* vmstest.com: Fix profile5 test.
