--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,8 @@
+2020-04-20         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawkinet.texi: Include statist figure in HTML version. Thanks
+	to Manuel Collado for pointing this out.
+
 2020-04-14         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* 5.1.0: Release tar ball made.
