--- a/doc/gawkinet.texi
+++ b/doc/gawkinet.texi
@@ -2884,9 +2884,9 @@ sure that none of the above reveals too much information about your system.
 @cindex PNG image format
 @cindex PS image format
 @cindex Boutell, Thomas
-@iftex
+@ifnotinfo
 @image{statist,3in}
-@end iftex
+@end ifnotinfo
 In the HTTP server examples we've shown thus far, we never present an image
 to the browser and its user. Presenting images is one task. Generating
 images that reflect some user input and presenting these dynamically
